<resources>
    <string name="app_name">PlayListMaker</string>
    <string name="play_list_maker_title">Playlist Maker</string>
    <string name="search">Поиск</string>
    <string name="media_library">Медиатека</string>
    <string name="settings">Настройки</string>
    <string name="dark_theme">Темная тема</string>
    <string name="share_app">Поделится приложением</string>
    <string name="contact_support">Написать в поддержку</string>
    <string name="user_agreement">Пользовательское соглашение</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="thanksAll">Спасибо разработчикам и разработчицам за крутое приложение!</string>
    <string name="messageToAll">Сообщение разработчикам и разработчицам приложения Playlist Maker</string>
    <string name="myMail">titkoviv@gmail.ru</string>
    <string name="offerString">https://yandex.ru/legal/practicum_offer</string>
    <string name="androidRazrab">https://practicum.yandex.ru/android-developer/</string>
    <string name="nothing_founded">Ничего не нашлось</string>
    <string name="media_lib_empty">Ваша медиатека пуста</string>
    <string name="play_list_empty">Вы не создали ни одного плейлиста</string>
    <string name="new_play_list">Ваша медиатека пуста</string>


    <string name="connection_issue">Проблемы со связью \n \n Загрузка не удалась. Проверьте \n подключение к интернету</string>
    <string name="itunes_base_url">https://itunes.apple.com/</string>
    <string name="your_search_history">Вы искали</string>
    <string name="clear_history_button">Очистить историю</string>
    <!-- Player -->
    <string name="track_time_title">Длительность</string>
    <string name="track_album_title">Альбом</string>
    <string name="track_year_title">Год</string>
    <string name="track_ganre_title">Жанр</string>
    <string name="track_country_title">Страна</string>

    <string name="track_name_placeholder">Название трека</string>
    <string name="track_singer_placeholder">исполнитель</string>
    <string name="cover512">512x512bb.jpg</string>
    <string name="fav_tracks">"Избранные треки"</string>
    <string name="play_lists">"Плейлисты"</string>


</resources>