<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    style="@style/SecondaryBackground"
    tools:context=".ui.Settings.SettingsFragment">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/search_toolbar"
        style="@style/ToolbarStyle"
        app:title="@string/settings"
        />

    <com.google.android.material.switchmaterial.SwitchMaterial
        android:id="@+id/dark_them_swithcher"
        android:layout_width="match_parent"
        android:gravity="center_vertical"
        android:text="@string/dark_theme"
        style="@style/DarkThemSwithcer"
        android:layout_marginTop="@dimen/padding_24"
        />

    <TextView
        android:id="@+id/shareApp"
        android:text="@string/share_app"
        style="@style/SettingsTextViewStyle"
        app:drawableEndCompat="@drawable/share"
        />

    <TextView
        android:id="@+id/contactSupport"
        android:text="@string/contact_support"
        style="@style/SettingsTextViewStyle"
        app:drawableEndCompat="@drawable/support"
        />

    <TextView
        android:id="@+id/userAgreement"
        android:text="@string/user_agreement"
        style="@style/SettingsTextViewStyle"
        app:drawableEndCompat="@drawable/arrow_forward"
        />

    </LinearLayout>
